--- a/html-css-course/final-project/styles/header.css
+++ b/html-css-course/final-project/styles/header.css
@@ -3,6 +3,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    background-color: white;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(228, 228, 228);
 }
 
 .left-section {
