--- a/html-css-course/final-project/styles/header.css
+++ b/html-css-course/final-project/styles/header.css
@@ -11,6 +11,7 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(228, 228, 228);
+    z-index: 100;
 }
 
 .left-section {
@@ -101,6 +102,22 @@
 
 .notifications-icon {
     height: 24px;
+}
+
+.notifications-icon-container {
+    position: relative;
+}
+
+.notifications-count {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: #d7000d;
+    color: white;
+    font-family: Roboto, Arial;
+    font-size: 11px;
+    padding: 2px 5px;
+    border-radius: 10px;
 }
 
 .current-user-picture {
