--- a/html-css-course/final-project/styles/video.css
+++ b/html-css-course/final-project/styles/video.css
@@ -4,10 +4,15 @@
 
 .video-title {
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
+}
+
+.video-link {
+    text-decoration: none;
+    color: inherit;
 }
 
 .video-info-grid {
@@ -16,12 +21,12 @@
 }
 
 .profile-picture {
-    width: 40px;
+    width: 36px;
     border-radius: 50px;
 }
 
 .thumbnail-row {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     position: relative;
 }
 
