--- a/html-css-course/final-project/styles/general.css
+++ b/html-css-course/final-project/styles/general.css
@@ -1,13 +1,25 @@
 p {
-    font-family: Roboto, Arial;
     margin-top: 0;
     margin-bottom: 0;
 }
 
 body {
+    font-family: Roboto, Arial;
     margin: 0;
     padding-top: 80px;
     padding-left: 96px;
     padding-right: 24px;
     background-color: rgb(248, 248, 248);
+}
+
+@media (min-width: 1000px) {
+    .video-title {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .video-author,
+    .video-stats {
+        font-size: 14px;
+    } 
 }
