--- a/html-css-course/final-project/styles/header.css
+++ b/html-css-course/final-project/styles/header.css
@@ -41,17 +41,15 @@
 .search-bar {
     flex: 1;
     height: 36px;
+    padding-left: 10px;
     font-size: 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(192, 192, 192);
+    border: 1px solid rgb(192, 192, 192);
     border-radius: 2px;
     box-sizing: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
     width: 0;
 }
 
 .search-bar::placeholder {
-    font-family: Roboto, Arial;
     font-size: 16ps;
 }
 
@@ -82,7 +80,6 @@
 .upload-icon-container .tooltip,
 .youtube-apps-icon-container .tooltip,
 .notifications-icon-container .tooltip {
-    font-family: Roboto, Arial;
     position: absolute;
     background-color: gray;
     color: white;
@@ -147,7 +144,6 @@
     right: -5px;
     background-color: #d7000d;
     color: white;
-    font-family: Roboto, Arial;
     font-size: 11px;
     padding: 2px 5px;
     border-radius: 10px;
@@ -155,5 +151,7 @@
 
 .current-user-picture {
     height: 32px;
+    width: 32px;
+    object-fit: cover;
     border-radius: 16px;
 }
